# zero-to-hero

./: README.md
config_loader/: Cargo.toml
config_loader/src/: main.rs
config_loader/src/config/: mod.rs
config_loader/src/services/: mod.rs
config_loader/test_data/: .env  test.env  test.toml
habit_tracker/: .gitignore  Cargo.toml
habit_tracker/src/: habit.rs  main.rs  storage.rs
habit_tracker/src/handlers/: mod.rs
habit_tracker/src/models/: mod.rs
habit_tracker/src/services/: mod.rs
simple_auth/: Cargo.toml
simple_auth/src/: main.rs
simple_auth/src/models/: user.rs
simple_auth/src/services/: mod.rs
simple_auth/src/storage/: mod.rs
